Support automated tests for python 3.10 RC

--- a/pytest.ini
+++ b/pytest.ini
@@ -61,6 +61,8 @@ filterwarnings =
     ; Triggered by asgiref on Python 3.7+:
     ignore:.*Task.all_tasks\(\) is deprecated, use asyncio.all_tasks\(\) instead.*:PendingDeprecationWarning
     ignore:.*Task.all_tasks\(\) is deprecated, use asyncio.all_tasks\(\) instead.*:DeprecationWarning
+    ; Triggered by asgiref on Python 3.10+:
+    ignore:There is no current event loop.*:DeprecationWarning
     ; cryptography raises a deprecation warning on Python 2
     ignore:Python 2 is no longer supported by the Python core team\..*
     ; cryptography raises a deprecation warning on Python 3.5
@@ -68,3 +70,5 @@ filterwarnings =
     ; Django 3.1 warnings
     ; RemovedInDjango40Warning to be fixed in https://github.com/encode/django-rest-framework/issues/7406
     ignore:django\.conf\.urls\.url\(\) is deprecated.*:PendingDeprecationWarning:rest_framework.routers
+    ; Triggered by Django using Python 3.10+
+    ignore:The distutils package is deprecated and slated for removal in Python 3\.12\. Use setuptools or check PEP 632 for potential alternatives
