--- a/tox.ini
+++ b/tox.ini
@@ -5,10 +5,10 @@ envlist =
     {py27,py34,py35,py36}-django111
     {py34,py35,py36,py37,py38}-django20
     {py35,py36,py37,py38}-django21
-    {py35,py36,py37,py38,py39}-django22
-    {py36,py37,py38,py39}-django30
-    {py36,py37,py38,py39}-django31
-    {py36,py37,py38,py39}-django32
+    {py35,py36,py37,py38,py39,py310}-django22
+    {py36,py37,py38,py39,py310}-django30
+    {py36,py37,py38,py39,py310}-django31
+    {py36,py37,py38,py39,py310}-django32
 
 [testenv]
 passenv =
