Remove async_test in favor of pytest.mark.asyncio
Using pytest-asyncio has better support for copying the ContextVars
on python 3.6.

--- a/tox.ini
+++ b/tox.ini
@@ -61,6 +61,7 @@ deps =
     pymongo
     pyramid
     pytest
+    pytest-asyncio ; python_version >= "3.6"
     pytest-cov
     pyyaml ; python_version != "3.4"
     pyyaml < 5.3 ; python_version == "3.4"
