--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,12 +17,14 @@ jobs:
         os: [ ubuntu-latest ]
         python: [3.9]
         cibuildwheel_version: ["cibuildwheel"]
-        cibw_build: ["*-*"]
+        cibw_build: [""]
+        cibw_skip: ["pp37-*"]
         include:
           - os: ubuntu-18.04
             python: 3.9
             cibuildwheel_version: "cibuildwheel==1.12.0"
-            cibw_build: "cp35-*"
+            cibw_build: "cp35-* cp36-*"
+            cibw_skip: ""
 
     steps:
       - uses: actions/checkout@v2
@@ -48,9 +50,9 @@ jobs:
         env:
           # Disable for platforms where pure Python wheels would be generated
           CIBW_ARCHS_LINUX: "auto aarch64"
-          CIBW_BUILD_VERBOSITY: 3
-          CIBW_SKIP: "cp27-* pp27-* pp36-* pp37-*"
+          CIBW_BUILD_VERBOSITY: 1
           CIBW_BUILD: ${{ matrix.cibw_build }}
+          CIBW_SKIP: ${{ matrix.cibw_skip }}
         run: cibuildwheel
 
       - uses: actions/upload-artifact@v2
