--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ envlist =
     {py36,py37,py38,py39,py310}-django30
     {py36,py37,py38,py39,py310}-django31
     {py36,py37,py38,py39,py310}-django32
+    {py38,py39,py310}-django40
 
 [testenv]
 passenv =
@@ -42,6 +43,8 @@ deps =
     django31: djangorestframework
     django32: Django>=3.2,<3.3
     django32: djangorestframework
+    django40: Django>=4.0b1,<4.1
+    django40: djangorestframework
     dramatiq>=1.0.0 ; python_version >= "3.5"
     elasticsearch
     falcon
