Handle importlib_resources deprecation warnings triggered by jarco/test

--- a/pytest.ini
+++ b/pytest.ini
@@ -72,3 +72,6 @@ filterwarnings =
     ignore:django\.conf\.urls\.url\(\) is deprecated.*:PendingDeprecationWarning:rest_framework.routers
     ; Triggered by Django using Python 3.10+
     ignore:The distutils package is deprecated and slated for removal in Python 3\.12\. Use setuptools or check PEP 632 for potential alternatives
+    ; Triggered by cherrypy -> jarco/text -> importlib_resources
+    ignore:read_text is deprecated\. Use files\(\) instead\.:DeprecationWarning
+    ignore:open_text is deprecated\. Use files\(\) instead\.:DeprecationWarning
