Run CI tests once per day.
This will identify integration problems due to new releases
quicker than the next time a PR is opened.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,10 @@ on:
     branches:
     - master
   pull_request:
+  schedule:
+    # Run daily. Avoid running at distinct hours to reduce load
+    # on GitHub.
+    - cron: '44 2 * * *'
 
 jobs:
   tests-ubuntu-20:
