Limit elasticsearch to < 8 for python < 3.6

--- a/pytest.ini
+++ b/pytest.ini
@@ -75,3 +75,5 @@ filterwarnings =
     ; Triggered by cherrypy -> jarco/text -> importlib_resources
     ignore:read_text is deprecated\. Use files\(\) instead\.:DeprecationWarning
     ignore:open_text is deprecated\. Use files\(\) instead\.:DeprecationWarning
+    ; ElasticSearch v8 will drop support for python < 3.6
+    ignore:Support for Python 3\.5 and earlier is deprecated and will be removed in v8\.0\.0:DeprecationWarning
