--- a/tox.ini
+++ b/tox.ini
@@ -47,7 +47,8 @@ deps =
     django40: Django>=4.0b1,<4.1
     django40: djangorestframework
     dramatiq>=1.0.0 ; python_version >= "3.5"
-    elasticsearch
+    elasticsearch ; python_version >= "3.6"
+    elasticsearch<8.0.0 ; python_version < "3.6"
     falcon
     flask
     flask-sqlalchemy
