--- a/tox.ini
+++ b/tox.ini
@@ -56,7 +56,7 @@ deps =
     huey
     hug>=2.5.1 ; python_version >= "3.5"
     httpretty<1 ; python_version < "3.5"
-    httpretty!=1.1.1 ; python_version >= "3.5"
+    httpretty ; python_version >= "3.5"
     jinja2
     ; nameko tests temporarily disabled
     ; Due to bad pinning of kombu only a past nameko version can be installed
@@ -73,7 +73,6 @@ deps =
     pyyaml ; python_version != "3.4"
     pyyaml < 5.3 ; python_version == "3.4"
     redis
-    requests
     rq
     six
     sqlalchemy ; python_version != "3.4"
