--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -160,7 +160,7 @@ jobs:
           repository_url: https://test.pypi.org/legacy/
           skip_existing: true
 
-      - name: Publish distributiosn to PyPI
+      - name: Publish distributions to PyPI
         if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/v')
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
