Ignore cryptography's deprecation warning regarding python 3.6

--- a/pytest.ini
+++ b/pytest.ini
@@ -67,6 +67,8 @@ filterwarnings =
     ignore:Python 2 is no longer supported by the Python core team\..*
     ; cryptography raises a deprecation warning on Python 3.5
     ignore:Python 3\.5 support will be dropped in the next release.*:UserWarning
+    ; cryptography raises a deprecation warning on Python 3.6
+    ignore:Python 3\.6 is no longer supported by the Python core team.*:UserWarning
     ; Django 3.1 warnings
     ; RemovedInDjango40Warning to be fixed in https://github.com/encode/django-rest-framework/issues/7406
     ignore:django\.conf\.urls\.url\(\) is deprecated.*:PendingDeprecationWarning:rest_framework.routers
