Pin click to pre-8.1

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,6 +21,7 @@ repos:
     hooks:
     - id: black
       language_version: python3
+      additional_dependencies: ['click<8.1']
   - repo: https://github.com/pycqa/isort
     rev: 5.10.1
     hooks:
