--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ envlist =
     {py35,py36,py37,py38}-django21
     {py35,py36,py37,py38,py39,py310}-django22
     {py36,py37,py38,py39,py310}-django{30,31,32}
-    {py38,py39,py310}-django40
+    {py38,py39,py310}-django{40,41}
 
 [testenv]
 passenv =
@@ -44,6 +44,8 @@ deps =
     django32: djangorestframework
     django40: Django>=4.0,<4.1
     django40: djangorestframework
+    django41: Django>4.0,<4.2
+    django41: djangorestframework
     dramatiq>=1.0.0 ; python_version >= "3.5"
     elasticsearch<8.0.0
     falcon
@@ -80,6 +82,6 @@ commands =
     pytest {posargs}
 
 # For newer versions of python use --asyncio-mode=auto usage.
-[testenv:py{37,38,39,310}-django{20,21,22,30,31,32,40}]
+[testenv:py{37,38,39,310}-django{20,21,22,30,31,32,40,41}]
 commands =
     pytest {posargs} --asyncio-mode=auto
