--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,58 @@ on:
     - cron: '44 2 * * *'
 
 jobs:
+  tests-ubuntu-latest:
+    name: Python ${{ matrix.python-version }} Ubuntu Latest
+    runs-on: ubuntu-latest
+
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version:
+        - "3.6"
+        - "3.7"
+        - "3.8"
+        - "3.9"
+        - "3.10"
+
+    services:
+      elasticsearch:
+        image: elasticsearch:8.2.3
+        ports:
+        - 9200:9200
+        env:
+          discovery.type: single-node
+          xpack.security.enabled: false
+
+      mongodb:
+        image: mongo:4
+        ports:
+        - 27017:27017
+
+      redis:
+        image: redis:6
+        ports:
+        - 6379:6379
+
+    env:
+      ELASTICSEARCH_URL: http://localhost:9200/
+      MONGODB_URL: mongodb://localhost:27017/
+      REDIS_URL: redis://localhost:6379/0
+
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Upgrade packaging tools
+      run: python -m pip install --upgrade pip setuptools virtualenv
+    - name: Install dependencies
+      run: python -m pip install --upgrade tox
+    - name: Run tox targets for ${{ matrix.python-version }}
+      run: |
+        ENV_PREFIX=$(tr -C -d "0-9" <<< "${{ matrix.python-version }}" | cut -c -3)
+        TOXENV=$(tox --listenvs | grep "^py$ENV_PREFIX" | tr '\n' ',') python -m tox
+
   tests-ubuntu-20:
     name: Python ${{ matrix.python-version }} Ubuntu 20
     runs-on: ubuntu-20.04
@@ -21,11 +73,6 @@ jobs:
         python-version:
         - "2.7"
         - "3.5"
-        - "3.6"
-        - "3.7"
-        - "3.8"
-        - "3.9"
-        - "3.10"
 
     services:
       elasticsearch:
