Fix build for python 3.11

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,13 +18,12 @@ jobs:
         python: [ '3.10' ]
         manylinux_image: [ manylinux2010, manylinux2014, manylinux_2_24 ]
         # Disable for platforms where pure Python wheels would be generated
-        cibw_skip: [ "pp37-* pp38-* pp39-* pp310-*" ]
+        cibw_skip: [ "pp37-* pp38-* pp39-* pp310-* pp311-*" ]
         include:
-          # Exclude building 3.10 wheel for manylinux1.
           - os: ubuntu-20.04
             python: 3.9
             manylinux_image: manylinux1
-            cibw_skip: "pp37-* pp38-* pp39-* pp310-* cp310-*"
+            cibw_skip: "pp37-* pp38-* pp39-* pp310-* cp310-* cp311-*"
     steps:
       - uses: actions/checkout@v2
 
