Allow exceptions for pkg_resources usages from pyramid and cherrypy.

--- a/pytest.ini
+++ b/pytest.ini
@@ -77,5 +77,8 @@ filterwarnings =
     ; Triggered by cherrypy -> jarco/text -> importlib_resources
     ignore:read_text is deprecated\. Use files\(\) instead\.:DeprecationWarning
     ignore:open_text is deprecated\. Use files\(\) instead\.:DeprecationWarning
+    ; Triggered by cherrypy -> cherrypy/__init__.py, pyramid/asset.py
+    ignore:pkg_resources is deprecated as an API:DeprecationWarning
+    ignore:.*pkg_resources.declare_namespace:DeprecationWarning
     ; ElasticSearch v8 will drop support for python < 3.6
     ignore:Support for Python 3\.5 and earlier is deprecated and will be removed in v8\.0\.0:DeprecationWarning
