--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,8 @@ envlist =
     {py35,py36,py37,py38}-django21
     {py35,py36,py37,py38,py39,py310}-django22
     {py36,py37,py38,py39,py310}-django{30,31,32}
-    {py38,py39,py310}-django{40,41}
+    {py38,py39,py310}-django{40,41,42}
+    py311-django{41,42}
 
 [testenv]
 passenv =
@@ -46,6 +47,8 @@ deps =
     django40: djangorestframework
     django41: Django>4.0,<4.2
     django41: djangorestframework
+    django42: Django>4.1,<5
+    django42: djangorestframework
     dramatiq>=1.0.0 ; python_version >= "3.5"
     elasticsearch<8.0.0; python_version <= "3.6"
     elasticsearch ; python_version > "3.6"
@@ -92,6 +95,6 @@ commands =
     pytest {posargs}
 
 # For newer versions of python use --asyncio-mode=auto usage.
-[testenv:py{37,38,39,310}-django{20,21,22,30,31,32,40,41}]
+[testenv:py{37,38,39,310,311}-django{20,21,22,30,31,32,40,41,42}]
 commands =
     pytest {posargs} --asyncio-mode=auto
