--- a/tox.ini
+++ b/tox.ini
@@ -73,7 +73,8 @@ deps =
     pyyaml ; python_version != "3.4"
     pyyaml < 5.3 ; python_version == "3.4"
     redis
-    rq
+    rq ; python_version >= "3.6"
+    rq < 1.12 ; python_version < "3.6"
     six
     sqlalchemy ; python_version != "3.4"
     sqlalchemy<1.3.24 ; python_version == "3.4"
