Pin importlib_metadata for < py3.8 in the tests.

--- a/tox.ini
+++ b/tox.ini
@@ -57,6 +57,9 @@ deps =
     hug>=2.5.1 ; python_version >= "3.5"
     httpretty<1 ; python_version < "3.5"
     httpretty ; python_version >= "3.5"
+    ; Celery tests are failing due to kombu having a bad pin of importlib_meta data.
+    importlib_metadata < 5.0.0 ; python_version < "3.8"
+    importlib_metadata ; python_version >= "3.8"
     jinja2
     ; nameko tests temporarily disabled
     ; Due to bad pinning of kombu only a past nameko version can be installed
