Handle sqlalchemy deprecations and start of v2 support.

--- a/tox.ini
+++ b/tox.ini
@@ -79,8 +79,9 @@ deps =
     rq ; python_version >= "3.6"
     rq < 1.12 ; python_version < "3.6"
     six
-    sqlalchemy ; python_version != "3.4"
     sqlalchemy<1.3.24 ; python_version == "3.4"
+    sqlalchemy < 2.0.0 ; python_version < "3.8"
+    sqlalchemy ; python_version >= "3.8"
     starlette ; python_version >= "3.6"
     webtest
 commands =
