--- a/pytest.ini
+++ b/pytest.ini
@@ -82,3 +82,5 @@ filterwarnings =
     ignore:.*pkg_resources.declare_namespace:DeprecationWarning
     ; ElasticSearch v8 will drop support for python < 3.6
     ignore:Support for Python 3\.5 and earlier is deprecated and will be removed in v8\.0\.0:DeprecationWarning
+    ; Triggered by sqlalchemy -> sqlalchemy/engine/base.py
+    ignore:.*These feature\(s\) are not compatible with SQLAlchemy 2\.0:DeprecationWarning
