Support flask_sqlalchemy v3
get_engine was deprecated in favor of make_engine.

--- a/tox.ini
+++ b/tox.ini
@@ -51,7 +51,8 @@ deps =
     elasticsearch ; python_version > "3.5"
     falcon
     flask
-    flask-sqlalchemy
+    flask-sqlalchemy < 3.0.0 ; python_version < "3.7"
+    flask-sqlalchemy ; python_version >= "3.7"
     hiredis
     huey
     hug>=2.5.1 ; python_version >= "3.5"
