--- a/pytest.ini
+++ b/pytest.ini
@@ -84,3 +84,5 @@ filterwarnings =
     ignore:Support for Python 3\.5 and earlier is deprecated and will be removed in v8\.0\.0:DeprecationWarning
     ; Triggered by sqlalchemy -> sqlalchemy/engine/base.py
     ignore:.*These feature\(s\) are not compatible with SQLAlchemy 2\.0:DeprecationWarning
+    ; Triggered by rq -> rq/job.py
+    ignore:The `push_connection` function is deprecated\. Pass the `connection` explicitly instead\.:DeprecationWarning
