--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -112,7 +112,7 @@ jobs:
 
 
   tests-python-27:
-    name: Python ${{ matrix.python-version }}
+    name: Python 2.7
     runs-on: ubuntu-20.04
     container:
       image: python:2.7.18-buster
@@ -153,9 +153,11 @@ jobs:
         run: |
           TOXENV=$(tox --listenvs | grep "^py27" | tr '\n' ',') python -m tox
 
-  tests-ubuntu-18:
-    name: Python ${{ matrix.python-version }} Ubuntu 18
-    runs-on: ubuntu-18.04
+  tests-python-34:
+    name: Python 3.4
+    runs-on: ubuntu-20.04
+    container:
+      image: python:3.4.10
 
     strategy:
       fail-fast: false
@@ -185,9 +187,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-python@v2
-      with:
-        python-version: "3.4"
     - name: Upgrade packaging tools
       run: python -m pip install --upgrade pip setuptools virtualenv
     - name: Install dependencies
