--- a/tox.ini
+++ b/tox.ini
@@ -69,7 +69,8 @@ deps =
     mock ; python_version < "3.0"
     more-itertools < 8.11.0 ; python_version <= "3.5"
     psutil
-    pymongo
+    pymongo < 3.13.0 ; python_version == "3.4"
+    pymongo ; python_version != "3.4"
     pyramid
     pytest
     pytest-asyncio ; python_version >= "3.6"
@@ -80,8 +81,8 @@ deps =
     rq ; python_version >= "3.6"
     rq < 1.12 ; python_version < "3.6"
     six
-    sqlalchemy<1.3.24 ; python_version == "3.4"
-    sqlalchemy < 2.0.0 ; python_version < "3.8"
+    sqlalchemy < 1.3.24 ; python_version == "3.4"
+    sqlalchemy < 2.0.0 ; python_version < "3.8" and python_version != "3.4"
     ; When compatible, re-enable sqlalchemy v2 tests.
     sqlalchemy < 2.0.0 ; python_version >= "3.8"
     ; sqlalchemy ; python_version >= "3.8"
