--- a/tox.ini
+++ b/tox.ini
@@ -18,34 +18,16 @@ deps =
     attrs ; python_version > "3.4"
     attrs<21.1.0 ; python_version <= "3.4"
     bottle
-    cherrypy ; python_version > "3.5"
-    cherrypy<18.6.1 ; python_version <= "3.5"
-    celery!=4.4.4  # https://github.com/celery/celery/issues/6153
     cryptography ; python_version >= "3.6"
     cryptography<3.2 ; python_version < "3.6"
-    django18: Django>=1.8,<1.9
-    django18: djangorestframework<3.7  # https://www.django-rest-framework.org/community/release-notes/
-    django111: Django>=1.11,<2.0
-    django111: djangorestframework<3.12  # https://www.django-rest-framework.org/community/3.11-announcement/
-    django111: django-tastypie
-    django20: Django>=2.0,<2.1
-    django20: djangorestframework
-    django20: django-tastypie
-    django21: Django>=2.1,<2.2
-    django21: djangorestframework
-    django21: django-tastypie
-    django22: Django>=2.2,<2.3
-    django22: djangorestframework
-    django30: Django>=3.0,<3.1
-    django30: djangorestframework
-    django31: Django>=3.1,<3.2
-    django31: djangorestframework
     django32: Django>=3.2,<3.3
     django32: djangorestframework
     django40: Django>=4.0,<4.1
     django40: djangorestframework
     django41: Django>4.0,<4.2
     django41: djangorestframework
+    django41: django-tastypie
+    django42: Django>4.2,<4.3
     dramatiq>=1.0.0 ; python_version >= "3.5"
     elasticsearch<8.0.0; python_version <= "3.5"
     elasticsearch ; python_version > "3.5"
@@ -66,7 +48,6 @@ deps =
     more-itertools < 8.11.0 ; python_version <= "3.5"
     psutil
     pymongo
-    pyramid
     pytest
     pytest-asyncio ; python_version >= "3.6"
     pytest-cov
@@ -78,7 +59,7 @@ deps =
     sqlalchemy ; python_version != "3.4"
     sqlalchemy<1.3.24 ; python_version == "3.4"
     starlette ; python_version >= "3.6"
-    webtest
+    webtest>=3.0.0
 commands =
     pytest {posargs}
 
