--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,7 @@ deps =
     bottle
     cryptography ; python_version >= "3.6"
     cryptography<3.2 ; python_version < "3.6"
+    celery!=4.4.4
     django32: Django>=3.2,<3.3
     django32: djangorestframework
     django40: Django>=4.0,<4.1
