--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,7 @@
 [tox]
 isolated_build = True
 envlist =
-    {py27,py34,py35}-django18
-    {py27,py34,py35,py36}-django111
-    {py34,py35,py36,py37,py38}-django20
-    {py35,py36,py37,py38}-django21
-    {py35,py36,py37,py38,py39,py310}-django22
-    {py36,py37,py38,py39,py310}-django{30,31,32}
+    {py38,py39,py310}-django32
     {py38,py39,py310}-django{40,41}
 
 [testenv]
@@ -15,12 +10,10 @@ passenv =
     MONGODB_URL
     REDIS_URL
 deps =
-    attrs ; python_version > "3.4"
-    attrs<21.1.0 ; python_version <= "3.4"
+    attrs
     bottle
-    cryptography ; python_version >= "3.6"
-    cryptography<3.2 ; python_version < "3.6"
-    celery!=4.4.4  # https://github.com/celery/celery/issues/6153
+    cryptography
+    celery!=4.4.4
     django32: Django>=3.2,<3.3
     django32: djangorestframework
     django40: Django>=4.0,<4.1
@@ -29,42 +22,36 @@ deps =
     django41: djangorestframework
     django41: django-tastypie
     django42: Django>4.2,<4.3
-    dramatiq>=1.0.0 ; python_version >= "3.5"
-    elasticsearch<8.0.0; python_version <= "3.5"
-    elasticsearch ; python_version > "3.5"
+    dramatiq>=1.0.0
+    elasticsearch
     falcon
     flask
     flask-sqlalchemy
     hiredis
     huey
-    hug>=2.5.1 ; python_version >= "3.5"
-    httpretty<1 ; python_version < "3.5"
-    httpretty ; python_version >= "3.5"
+    hug>=2.5.1
+    httpretty
     jinja2
     ; nameko tests temporarily disabled
     ; Due to bad pinning of kombu only a past nameko version can be installed
     ; alongside the latest celery.
     ; nameko<3
-    mock ; python_version < "3.0"
-    more-itertools < 8.11.0 ; python_version <= "3.5"
     psutil
     pymongo
     pytest
-    pytest-asyncio ; python_version >= "3.6"
+    pytest-asyncio
     pytest-cov
-    pyyaml ; python_version != "3.4"
-    pyyaml < 5.3 ; python_version == "3.4"
+    pyyaml
     redis
     rq
     six
-    sqlalchemy ; python_version != "3.4"
-    sqlalchemy<1.3.24 ; python_version == "3.4"
-    starlette ; python_version >= "3.6"
+    sqlalchemy
+    starlette
     webtest>=3.0.0
 commands =
     pytest {posargs}
 
 # For newer versions of python use --asyncio-mode=auto usage.
-[testenv:py{37,38,39,310}-django{20,21,22,30,31,32,40,41}]
+[testenv:py{38,39,310}-django{32,40,41}]
 commands =
     pytest {posargs} --asyncio-mode=auto
