update manual testing example re-link to broken celery issue for clarification

--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ deps =
     bottle
     cryptography ; python_version >= "3.6"
     cryptography<3.2 ; python_version < "3.6"
-    celery!=4.4.4
+    celery!=4.4.4  # https://github.com/celery/celery/issues/6153
     django32: Django>=3.2,<3.3
     django32: djangorestframework
     django40: Django>=4.0,<4.1
