--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ deps =
     attrs
     bottle
     cryptography
-    celery!=4.4.4
+    celery!=4.4.4  # https://github.com/celery/celery/issues/6153
     django32: Django>=3.2,<3.3
     django32: djangorestframework
     django40: Django>=4.0,<4.1
