add py311 to test envs, use partial to create wrapt decorator for error service thread

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,7 @@
 [tox]
 isolated_build = True
 envlist =
-    {py38,py39,py310}-django32
-    {py38,py39,py310}-django{40,41}
+    {py38,py39,py310,py311}-django{40,41,42}
 
 [testenv]
 passenv =
@@ -21,7 +20,8 @@ deps =
     django41: Django>4.0,<4.2
     django41: djangorestframework
     django41: django-tastypie
-    django42: Django>4.2,<4.3
+    django42: Django>=4.2,<4.3
+    django42: djangorestframework
     dramatiq>=1.0.0
     elasticsearch
     falcon
@@ -48,6 +48,6 @@ commands =
     pytest {posargs}
 
 # For newer versions of python use --asyncio-mode=auto usage.
-[testenv:py{38,39,310}-django{32,40,41}]
+[testenv:py{38,39,310,311}-django{32,40,41,42}]
 commands =
     pytest {posargs} --asyncio-mode=auto
