--- a/pytest.ini
+++ b/pytest.ini
@@ -48,3 +48,4 @@ filterwarnings =
     ignore:open_text is deprecated\. Use files\(\) instead\.:DeprecationWarning
     ; ElasticSearch v8 will drop support for python < 3.6
     ignore:Support for Python 3\.5 and earlier is deprecated and will be removed in v8\.0\.0:DeprecationWarning
+    ignore:'cgi' is deprecated and slated for removal in Python 3.13
