use manual context for test flask sqlalchemy

--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,8 @@ deps =
     elasticsearch
     falcon
     flask
-    flask-sqlalchemy
+    flask-sqlalchemy < 3.0.0 ; python_version < "3.7"
+    flask-sqlalchemy ; python_version >= "3.7"
     hiredis
     huey
     hug>=2.5.1
