--- a/tox.ini
+++ b/tox.ini
@@ -47,16 +47,20 @@ deps =
     django41: Django>4.0,<4.2
     django41: djangorestframework
     dramatiq>=1.0.0 ; python_version >= "3.5"
-    elasticsearch<8.0.0; python_version <= "3.5"
-    elasticsearch ; python_version > "3.5"
+    elasticsearch<8.0.0; python_version <= "3.6"
+    elasticsearch ; python_version > "3.6"
     falcon
     flask
-    flask-sqlalchemy
+    flask-sqlalchemy < 3.0.0 ; python_version < "3.7"
+    flask-sqlalchemy ; python_version >= "3.7"
     hiredis
     huey
     hug>=2.5.1 ; python_version >= "3.5"
     httpretty<1 ; python_version < "3.5"
     httpretty ; python_version >= "3.5"
+    ; Celery tests are failing due to kombu having a bad pin of importlib_meta data.
+    importlib_metadata < 5.0.0 ; python_version < "3.8"
+    importlib_metadata ; python_version >= "3.8"
     jinja2
     ; nameko tests temporarily disabled
     ; Due to bad pinning of kombu only a past nameko version can be installed
@@ -65,7 +69,8 @@ deps =
     mock ; python_version < "3.0"
     more-itertools < 8.11.0 ; python_version <= "3.5"
     psutil
-    pymongo
+    pymongo < 3.13.0 ; python_version == "3.4"
+    pymongo ; python_version != "3.4"
     pyramid
     pytest
     pytest-asyncio ; python_version >= "3.6"
@@ -73,10 +78,14 @@ deps =
     pyyaml ; python_version != "3.4"
     pyyaml < 5.3 ; python_version == "3.4"
     redis
-    rq
+    rq ; python_version >= "3.6"
+    rq < 1.12 ; python_version < "3.6"
     six
-    sqlalchemy ; python_version != "3.4"
-    sqlalchemy<1.3.24 ; python_version == "3.4"
+    sqlalchemy < 1.3.24 ; python_version == "3.4"
+    sqlalchemy < 2.0.0 ; python_version < "3.8" and python_version != "3.4"
+    ; When compatible, re-enable sqlalchemy v2 tests.
+    sqlalchemy < 2.0.0 ; python_version >= "3.8"
+    ; sqlalchemy ; python_version >= "3.8"
     starlette ; python_version >= "3.6"
     webtest
 commands =
