Resolve CI errors (#752)
* Allow exceptions for pkg_resources usages from pyramid and cherrypy.

* Move python 3.6 to ubuntu 20 GitHub action runner.

Py36 isn't included with ubuntu 22

* Update rq test dependency for dropped 3.6 support.

* Use a specific python 2.7 image for tests.

See https://github.com/actions/setup-python/issues/672

Don't use setup-python for python2.7

* Pin importlib_metadata for < py3.8 in the tests.

* Handle sqlalchemy deprecations and start of v2 support.

* Disable tests for SQLAlchemy v2 to allow CI to pass.

* Update pre-commit repo versions.

* Support flask_sqlalchemy v3

get_engine was deprecated in favor of make_engine.

* Support ElasticSearch 8.7 health_report API.

Update python3.6 tests to use elasticsearch 7

* Update tests to be compatible with rq v1.13+

* Switch python 3.4 GitHub action to run on a custom container.

* Update changelog for CI fixes.

--- a/pytest.ini
+++ b/pytest.ini
@@ -46,6 +46,13 @@ filterwarnings =
     ; Triggered by cherrypy -> jarco/text -> importlib_resources
     ignore:read_text is deprecated\. Use files\(\) instead\.:DeprecationWarning
     ignore:open_text is deprecated\. Use files\(\) instead\.:DeprecationWarning
+    ; Triggered by cherrypy -> cherrypy/__init__.py, pyramid/asset.py
+    ignore:pkg_resources is deprecated as an API:DeprecationWarning
+    ignore:.*pkg_resources.declare_namespace:DeprecationWarning
     ; ElasticSearch v8 will drop support for python < 3.6
     ignore:Support for Python 3\.5 and earlier is deprecated and will be removed in v8\.0\.0:DeprecationWarning
+    ; Triggered by sqlalchemy -> sqlalchemy/engine/base.py
+    ignore:.*These feature\(s\) are not compatible with SQLAlchemy 2\.0:DeprecationWarning
+    ; Triggered by rq -> rq/job.py
+    ignore:The `push_connection` function is deprecated\. Pass the `connection` explicitly instead\.:DeprecationWarning
     ignore:'cgi' is deprecated and slated for removal in Python 3.13
