--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,8 @@ deps =
     elasticsearch
     falcon
     flask
-    flask-sqlalchemy
+    flask-sqlalchemy < 3.0.0 ; python_version < "3.7"
+    flask-sqlalchemy ; python_version >= "3.7"
     hiredis
     huey
     hug>=2.5.1
@@ -39,11 +40,16 @@ deps =
     pytest-cov
     pyyaml
     redis
-    rq
+    rq ; python_version >= "3.6"
+    rq < 1.12 ; python_version < "3.6"
     six
-    sqlalchemy
-    starlette
-    webtest>=3.0.0
+    sqlalchemy < 1.3.24 ; python_version == "3.4"
+    sqlalchemy < 2.0.0 ; python_version < "3.8" and python_version != "3.4"
+    ; When compatible, re-enable sqlalchemy v2 tests.
+    sqlalchemy < 2.0.0 ; python_version >= "3.8"
+    ; sqlalchemy ; python_version >= "3.8"
+    starlette ; python_version >= "3.6"
+    webtest
 commands =
     pytest {posargs}
 
