Update python and django versions. (#753)

--- a/tox.ini
+++ b/tox.ini
@@ -19,11 +19,11 @@ deps =
     django40: djangorestframework
     django41: Django>4.0,<4.2
     django41: djangorestframework
-    django41: django-tastypie
-    django42: Django>=4.2,<4.3
+    django42: Django>4.1,<5
     django42: djangorestframework
-    dramatiq>=1.0.0
-    elasticsearch
+    dramatiq>=1.0.0 ; python_version >= "3.5"
+    elasticsearch<8.0.0; python_version <= "3.6"
+    elasticsearch ; python_version > "3.6"
     falcon
     flask
     flask-sqlalchemy < 3.0.0 ; python_version < "3.7"
@@ -54,6 +54,6 @@ commands =
     pytest {posargs}
 
 # For newer versions of python use --asyncio-mode=auto usage.
-[testenv:py{38,39,310,311}-django{32,40,41,42}]
+[testenv:py{37,38,39,310,311}-django{20,21,22,30,31,32,40,41,42}]
 commands =
     pytest {posargs} --asyncio-mode=auto
