--- a/tox.ini
+++ b/tox.ini
@@ -11,49 +11,44 @@ passenv =
 deps =
     attrs
     bottle
-    cryptography
+    cherrypy
     celery!=4.4.4  # https://github.com/celery/celery/issues/6153
-    django32: Django>=3.2,<3.3
-    django32: djangorestframework
+    cryptography
     django40: Django>=4.0,<4.1
     django40: djangorestframework
     django41: Django>4.0,<4.2
     django41: djangorestframework
     django42: Django>4.1,<5
     django42: djangorestframework
-    dramatiq>=1.0.0 ; python_version >= "3.5"
-    elasticsearch<8.0.0; python_version <= "3.6"
-    elasticsearch ; python_version > "3.6"
+    dramatiq>=1.0.0
+    elasticsearch
     falcon
     flask
-    flask-sqlalchemy < 3.0.0 ; python_version < "3.7"
-    flask-sqlalchemy ; python_version >= "3.7"
+    flask-sqlalchemy
     hiredis
     huey
     hug>=2.5.1
     httpretty
+    importlib_metadata
     jinja2
     psutil
     pymongo
+    pyramid
     pytest
     pytest-asyncio
     pytest-cov
     pyyaml
     redis
-    rq ; python_version >= "3.6"
-    rq < 1.12 ; python_version < "3.6"
+    rq
     six
-    sqlalchemy < 1.3.24 ; python_version == "3.4"
-    sqlalchemy < 2.0.0 ; python_version < "3.8" and python_version != "3.4"
-    ; When compatible, re-enable sqlalchemy v2 tests.
-    sqlalchemy < 2.0.0 ; python_version >= "3.8"
-    ; sqlalchemy ; python_version >= "3.8"
-    starlette ; python_version >= "3.6"
+    sqlalchemy < 2.0.0 ; python_version <= "3.8"
+    sqlalchemy
+    starlette
     webtest
 commands =
     pytest {posargs}
 
 # For newer versions of python use --asyncio-mode=auto usage.
-[testenv:py{37,38,39,310,311}-django{20,21,22,30,31,32,40,41,42}]
+[testenv:py{39,310,311}-django{40,41,42}]
 commands =
     pytest {posargs} --asyncio-mode=auto
