--- a/tox.ini
+++ b/tox.ini
@@ -11,16 +11,14 @@ passenv =
 deps =
     attrs
     bottle
-    cryptography
+    cherrypy
     celery!=4.4.4  # https://github.com/celery/celery/issues/6153
-    django32: Django>=3.2,<3.3
-    django32: djangorestframework
+    cryptography
     django40: Django>=4.0,<4.1
     django40: djangorestframework
     django41: Django>4.0,<4.2
     django41: djangorestframework
-    django41: django-tastypie
-    django42: Django>=4.2,<4.3
+    django42: Django>4.1,<5
     django42: djangorestframework
     dramatiq>=1.0.0
     elasticsearch
@@ -31,9 +29,11 @@ deps =
     huey
     hug>=2.5.1
     httpretty
+    importlib_metadata
     jinja2
     psutil
     pymongo
+    pyramid
     pytest
     pytest-asyncio
     pytest-cov
@@ -41,13 +41,14 @@ deps =
     redis
     rq
     six
+    sqlalchemy < 2.0.0 ; python_version <= "3.8"
     sqlalchemy
     starlette
-    webtest>=3.0.0
+    webtest
 commands =
     pytest {posargs}
 
 # For newer versions of python use --asyncio-mode=auto usage.
-[testenv:py{38,39,310,311}-django{32,40,41,42}]
+[testenv:py{38,39,310,311}-django{40,41,42}]
 commands =
     pytest {posargs} --asyncio-mode=auto
