use elasticsearch <8.0 for <=3.9

--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,8 @@ deps =
     django42: Django>4.1,<5
     django42: djangorestframework
     dramatiq>=1.0.0
-    elasticsearch
+    elasticsearch<8.0.0; python_version <= "3.9"
+    elasticsearch ; python_version > "3.9"
     falcon
     flask
     flask-sqlalchemy
