re-add django 3.2 to tests, remove erroneous django version checks

--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,8 @@ deps =
     cherrypy
     celery!=4.4.4  # https://github.com/celery/celery/issues/6153
     cryptography
+    django32: Django>=3.2,<3.3
+    django32: djangorestframework
     django40: Django>=4.0,<4.1
     django40: djangorestframework
     django41: Django>4.0,<4.2
