--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Upgrade packaging tools
-      run: python -m pip install --upgrade pip setuptools virtualenv
+      run: python -m pip install --upgrade pip setuptools importlib_metadata virtualenv
     - name: Install dependencies
       run: python -m pip install --upgrade tox
     - name: Run tox targets for ${{ matrix.python-version }}
@@ -104,7 +104,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Upgrade packaging tools
-      run: python -m pip install --upgrade pip setuptools virtualenv
+      run: python -m pip install --upgrade pip setuptools importlib_metadata virtualenv
     - name: Install dependencies
       run: python -m pip install --upgrade tox
     - name: Run tox targets for ${{ matrix.python-version }}
